# eovivas

./: _taskoj_.txt  datumpurigilo.py  diskordo.py  listo.html  main.py  my_account.session  nemain.py  pyproject.toml  requirements.txt  retejastarto.py  retlisto.html  telegramo.py  views.py
static/: belajoj.css
