[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
pyTelegramBotAPI = "^4.5.0"
telebot = "^0.0.4"
Flask = "^2.1.2"
replit = "^3.2.4"
Pyrogram = "^2.0.26"
TgCrypto = "^1.2.3"
bs4 = "^0.0.1"
requests = "^2.28.1"
aiohttp = "^3.8.1"
"discord.py" = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"